# el-loom

./: .gitignore  README.md  pyproject.toml
.github/workflows/: _build_and_deploy.yaml  docs_publish_live.yml  docs_publish_preview.yml  live-publish.yml  preview-publish.yml  test-pypi-publish.yml
ci/: delete-old-deployments.js
docs/: Makefile  README.md  make.bat
docs/source/: conf.py  index.rst
src/checkers/: copyright.py  strictzip.py
tests/test_checkers/: test_copyright.py  test_strictzip.py
tests/test_cliffordsim/: test_cliffordsim_creg.py  test_cliffordsim_engine.py  test_cliffordsim_formatter.py  test_cliffordsim_instruction.py  test_cliffordsim_moment.py  test_cliffordsim_momentqueue.py  test_cliffordsim_operation.py  test_cliffordsim_pauliframe.py  test_cliffordsim_utilities.py  utilities.py
tests/test_eka/: test_block.py  test_channel.py  test_circuit.py  test_circuit_algorithms.py  test_eka.py  test_enums.py  test_graphs.py  test_lattice.py  test_matrices.py  test_measure_block_syndromes.py  test_operation_base.py  test_operation_code.py  test_pauli_operator.py  test_pauliops.py  test_paulistr.py  test_stab_array.py  test_stabilizer.py  test_syndrome_circuit.py
tests/test_executor/: test_circuit_error_model.py  test_eka_circuit_to_cudaq_converter.py  test_eka_circuit_to_mimiq_converter.py  test_eka_circuit_to_pennylane_converter.py  test_eka_circuit_to_qasm_converter.py  test_eka_circuit_to_stim_converter.py
tests/test_interpreter/: __init__.py  test_applicator.py  test_detector.py  test_generate_detector.py  test_generate_syndromes.py  test_interpretationstep.py  test_interpreter.py  test_syndrome.py
tests/test_notebooks/: test_notebooks.py
tests/test_rotated_surface_code/: test_integrated_rsc.py
tests/test_unit/: test_revision.py
tests/test_validator/: test_code_switch.py  test_debug_dataclass.py  (+3 more)
(+189 files in other folders)
