[project]
name = "loom"
version = "0.1.0"
description = "An integrated software platform designed to handle the complexities of quantum error correction, seamlessly transforming applications into fault-tolerant, hardware-ready versions."
authors = [{name="Entropica Labs Pte Ltd", email="info@entropicalabs.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic (>=2.9,<2.10)",
    "stim (>=1.14.0,<2.0.0)",
    "numpy>=1.26.0",
    "nbformat>=4.2.0",         # Required for plotly
    "plotly~=6.1.2",           # Required for visualizer
    "igraph~=0.11.9",
    "networkx~=3.5"
]

[tool.poetry]
packages = [
    { include = "loom", from = "src" },
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
black = {version=">=25.0", extras=["jupyter"]}
pylint = "^3.3.6"
ipykernel = "^6.29.5"
nbconvert = ">=7.16.6"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0"
sphinx-autodoc-typehints = "^3.0"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = "^3.0"
sphinx-autobuild = "^2024.10.3"
qiskit = ">=2.1.0,<3.0.0"
qiskit-aer = ">=0.17.1,<0.18.0"
qiskit-qasm3-import = ">=0.6.0,<0.7.0"
myst-nb = ">=1.3.0"          # Required for displaying jupyter notebooks

[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
qiskit = ">=2.1.0,<3.0.0"
qiskit-aer = ">=0.17.1,<0.18.0"
qiskit-qasm3-import = ">=0.6.0,<0.7.0"
myst-nb = ">=1.3.0"          # Required for displaying jupyter notebooks

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "notebook: marks notebook tests (deselect with '-m \"not notebooks\"')",
]
